--- a/puppet/environments/development/modules/chromedriver/templates/install.sh.erb
+++ b/puppet/environments/development/modules/chromedriver/templates/install.sh.erb
@@ -1,4 +1,5 @@
 #!/bin/bash -e
 
 curl -sL 'http://chromedriver.storage.googleapis.com/2.21/chromedriver_linux64.zip' > chromedriver.zip
-unzip chromedriver.zip -d /usr/bin
+unzip -ud /usr/bin chromedriver.zip
+chmod +x /usr/bin/chromedriver
