--- a/puppet/environments/development/modules/chrome/templates/install.sh.erb
+++ b/puppet/environments/development/modules/chrome/templates/install.sh.erb
@@ -2,5 +2,5 @@
 
 curl -sL "https://www.googleapis.com/download/storage/v1/b/chromium-browser-snapshots/o/Linux_x64%2f<%= @chrome_Linux_x64_revision %>%2fchrome-linux.zip?alt=media" > chrome-linux.zip
 unzip -ud /usr/local chrome-linux.zip
-ln -s ../local/chrome-linux/chrome /usr/bin/chrome
-chmod +x /usr/bin/chrome
+ln -s ../local/chrome-linux/chrome /usr/bin/chromium-browser
+chmod +x /usr/bin/chromium-browser
